<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/blue_dark"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_dark"
            android:drawableStart="@drawable/burger"
            android:drawableTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_dark"
            app:icon="@drawable/ic_main"
            app:iconGravity="textStart"
            app:iconTint="@color/red" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_dark"
            android:drawableEnd="@drawable/ic_search"
            android:drawableTint="@color/white" />

    </LinearLayout>


    <TextView
        android:id="@+id/policies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/policies"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/resourse_file1"
        android:drawableEnd="@drawable/right_1"
        android:hint="@string/policy"
        android:paddingVertical="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/resourse_file1"
        android:drawableEnd="@drawable/right_1"
        android:hint="@string/product_category2"
        android:paddingVertical="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/resourse_file1"
        android:drawableEnd="@drawable/right_1"
        android:hint="@string/origin_country"
        android:paddingVertical="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/resourse_file1"
        android:drawableEnd="@drawable/right_1"
        android:hint="@string/brand"
        android:paddingVertical="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/current_policies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/current_policies"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_button"
        android:paddingVertical="14dp"
        android:text="@string/export_as_csv"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingVertical="6dp">

        <Button
            android:id="@+id/country_of_origin"
            style="@style/Gray.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/drop_down_1"
            android:text="@string/country_of_origin"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/product_category"
            style="@style/Gray.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/drop_down_1"
            android:text="@string/product_category"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>
